--- a/NewMedia.html
+++ b/NewMedia.html
@@ -57,6 +57,7 @@
 <h2>Student Web Pages</h2>
 <ul>
 	<li><a href="http://jeremycouillard.tumblr.com"target="_blank">EXAMPLE</a></li>
+	<li><a href="http://castro-samuel.tumblr.com"target="_blank">Samuel Castro</a></li>
 
 
 	<!-- copy example above, paste below here with your name and link to tumblr --!>
